--- a/Mission06_Cameron/Views/Home/collection.cshtml
+++ b/Mission06_Cameron/Views/Home/collection.cshtml
@@ -1,8 +1,17 @@
 ﻿@model Form
 
 <form method="post">
-    <label asp-for="Category">Category: </label>
-    <input asp-for="Category" required />
+
+    <input type="hidden" asp-for="MovieId" />
+
+    <label asp-for="CategoryId">Category: </label>
+    <select asp-for="CategoryId">
+        <option value="">Select a Category</option>
+        @foreach (Category c in ViewBag.Categories) //Assign correct catgory to the category id for each row
+        {
+            <option value="@c.CategoryId">@c.CategoryName</option>
+        }
+    </select>
     <br />
     <label asp-for="Title">Title: </label>
     <input asp-for="Title" required />
@@ -23,15 +32,21 @@
     <br />
     <label asp-for="Edited">Edited: </label>
     <select asp-for="Edited">
-        <option value="true">Yes</option>
-        <option value="False">No</option>
+        <option value="1">Yes</option>
+        <option value="0">No</option>
     </select>
     <br />
     <label asp-for="LentTo">Lent To: </label>
     <input asp-for="LentTo" />
     <br />
+    <label asp-for="CopiedToPlex">Copied to plex: </label>
+    <input asp-for="CopiedToPlex" />
+    <br />
     <label asp-for="Notes">Notes: </label>
     <input asp-for="Notes" maxlength="25" />
     <br />
     <button type="submit">Submit</button>
+
+    <div asp-validation-summary="All"></div>
+
 </form>
